--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -11,12 +11,11 @@
                 <div class="col-1"></div>
                 <div class="col-9 employee-details">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-5">
                             <span class="employee-full-name">{{employee.fullName}}</span><br>
-                            <span class="employee-role">{{employee.primarySkill}}
-                            </span>
+                            <span class="employee-role">{{employee.primarySkill}}</span>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                             <div class="row">
                                 <button type="button" class="btn btn-mentor">
                                     <fa-icon class="slider-icon" [icon]="faUserCircle" size="lg"></fa-icon>
@@ -26,15 +25,14 @@
                                     <fa-icon class="slider-icon" [icon]="faTrophy" size="md"></fa-icon>
                                     <span class="mentor-text">MVP</span>
                                 </button>
-
                             </div>
                         </div>
                     </div>
                     <div class="row employee-description">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quidem obcaecati velit
+                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quidem obcaecati velit
                             sequi ipsam consequatur, distinctio ut?</p>
-                        <button type="button" class="btn btn-outline-secondary view-profile">View Profile</button>
                     </div>
+                    <button type="button" class="btn btn-outline-secondary view-profile">View Profile</button>
                 </div>
             </div>
         </div>
