Update url employee api, remove view profile, update card parameters

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -2,7 +2,7 @@
     <div class="title" id="title">
         <div class="row">
             <div class="col-8">
-                <h1>Employee Search <fa-icon class="slider-icon" [icon]="faSearch" size="sm"></fa-icon></h1>
+                <h1>Employee Search</h1>
             </div>
             <div class="col-4">
                 <div *ngIf="isMobile" class="slider" (click)="toggleSearch()">
