--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/expert-search/expert-search.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/expert-search/expert-search.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="container">
     <app-employee-search-filter (employeeResponseEvent)="message($event)"></app-employee-search-filter>
     <app-employee-search-results [employeeSearchResult]="employeeSearchResult"></app-employee-search-results>
