--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
@@ -5,12 +5,12 @@
                 class="d-inline-block align-top" alt="">
         </a>
     </div>
-    <div class="nav-toggle">
+    <!-- <div class="nav-toggle">
             <fa-icon *ngIf="toggle" class="slider-icon side-nav-toggle" [icon]="faBars" size="lg" (click)="toggleIcon()"></fa-icon>
             <fa-icon *ngIf="!toggle" class="slider-icon side-nav-toggle" [icon]="faTimes" size="lg" (click)="toggleIcon()"></fa-icon>
-    </div>
+    </div> -->
     <span class="pk-title">
-        Communications
+        Communities
     </span>
     <span class="profile">
             <fa-icon class="slider-icon side-nav-toggle" [icon]="faUserCircle" size="lg"></fa-icon>
