--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.scss
@@ -15,8 +15,8 @@ $color-white: #FFFFFF;
     font-weight: normal;
     font-size: 12px;
     line-height: 16px;
-    margin: 5px;
-    padding: 0px 5px 0px 5px;
+    margin: 5px 5px 5px 0px;
+    padding: 7px 5px 0px 5px;
 }
 
 ::ng-deep .mat-form-field-underline {
