--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.scss
@@ -19,6 +19,10 @@ $color-white: #FFFFFF;
     padding: 7px 5px 0px 5px;
 }
 
+::ng-deep .mat-form-field-label{
+    font-size: 14px !important;
+}
+
 ::ng-deep .mat-form-field-underline {
     display: none;
 }
