--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-name-input/search-name-input.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-name-input/search-name-input.component.scss
@@ -13,10 +13,14 @@ $color-white: #FFFFFF;
 
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 20px;
     margin: 5px 5px 5px 0px;
-    padding: 7px 5px 0px 5px;
+    padding: 0px 5px 5px 5px;
+}
+
+::ng-deep .mat-form-field-label{
+    font-size: 14px !important;
 }
 
 ::ng-deep .mat-form-field-underline {
