Update auto complete form for all input fields

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -13,54 +13,83 @@
         </div>
     </div>
     <div *ngIf="!isMobile || toggleSearchForm" class="search-criteria">
-        <form #searchEmployeeForm="ngForm"
-            (keydown.enter)="$event.preventDefault()"
+        <form #searchEmployeeForm="ngForm" (keydown.enter)="$event.preventDefault()"
             (ngSubmit)="searchEmployees(searchEmployeeForm.value);">
             <div class="row">
                 <div class="col-lg-3">
                     <app-search-skill-input (searchSkillEvent)="skillMessage($event)"></app-search-skill-input>
                 </div>
                 <div class="col-lg-2">
-                    <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>    
+                    <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-sm-4">
                             <div class="btn-group">
                                 <mat-form-field>
-                                    <mat-label class="custom-mat-label">Availability</mat-label>
-                                    <mat-select name="availability" ngModel>
-                                        <mat-option value="true">Available</mat-option>
-                                        <mat-option value="true">Partial Available</mat-option>
-                                        <mat-option value="false">Not Available</mat-option>
-                                    </mat-select>
+                                    <input type="text" #availabilityInput placeholder="Availability" matInput
+                                        [formControl]="availabilityControl" [matAutocomplete]="availability">
+                                    <mat-autocomplete autoActiveFirstOption #availability="matAutocomplete"
+                                        (optionSelected)="setAvailability($event.option.value)">
+                                        <mat-option #availabilitySearch
+                                            *ngFor="let option of filteredAvailabilityOptions | async" [value]="option">
+                                            {{option}}
+                                        </mat-option>
+                                    </mat-autocomplete>
                                 </mat-form-field>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-4">
                             <div class="btn-group">
                                 <mat-form-field>
-                                    <mat-label class="custom-mat-label">Role</mat-label>
-                                    <mat-select name="role" ngModel>
-                                        <mat-option *ngFor="let role of roles" value="{{role}}">{{role}}</mat-option>
-                                    </mat-select>
+                                    <input type="text" #roleInput placeholder="Role" matInput
+                                        [formControl]="roleControl" [matAutocomplete]="role">
+                                    <mat-autocomplete autoActiveFirstOption #role="matAutocomplete"
+                                        (optionSelected)="setRole($event.option.value)">
+                                        <mat-option #roleSearch *ngFor="let option of filteredRoleOptions | async"
+                                            [value]="option"
+                                            matTooltip="{{option}}"
+                                            matTooltipPosition="right">
+                                            {{option}}
+                                        </mat-option>
+                                    </mat-autocomplete>
                                 </mat-form-field>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-4">
                             <div class="btn-group">
-                                <mat-form-field>
+                                <!-- <mat-form-field>
                                     <mat-label class="custom-mat-label">Location</mat-label>
                                     <mat-select name="location" ngModel>
-                                        <mat-option *ngFor="let location of locations" value="{{location}}">{{location}}</mat-option>
+                                        <mat-option *ngFor="let location of locations" value="{{location}}">{{location}}
+                                        </mat-option>
                                     </mat-select>
+                                </mat-form-field> -->
+                                <mat-form-field>
+                                    <input type="text" #locationInput placeholder="Location" matInput
+                                        [formControl]="locationControl" [matAutocomplete]="location">
+                                    <mat-autocomplete autoActiveFirstOption #location="matAutocomplete"
+                                        (optionSelected)="setLocation($event.option.value)">
+                                        <mat-option #locationSearch *ngFor="let option of filteredLocationOptions | async"
+                                            [value]="option"
+                                            matTooltip="{{option}}"
+                                            matTooltipPosition="right">
+                                            {{option}}
+                                        </mat-option>
+                                    </mat-autocomplete>
                                 </mat-form-field>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-1">
                     <button type="submit" class="btn search-filter">Filter Results</button>
+                    <!-- <input class="btn btn-primary" (click)="reset()">
+                        Reset
+                        <fa-icon class="slider-icon remove-skill" [icon]="faTimes" size="lg"></fa-icon>
+                </input> -->
+                <!-- <input type="button" class="btn btn-warning" value="Reset" (click)="searchEmployeeForm.reset()"> -->
                 </div>
             </div>
             <div class="row">
