--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -91,29 +91,29 @@ h1 {
     }
 }
 
-.mat-form-field{
-    width: 95px;
-    height: 44px;
-    background: $color-white;
-    border: 1px solid #B5B5B5;
-    color: $color-black-normal;
-    border-radius: 5px;
+// .mat-form-field{
+//     width: 110px;
+//     height: 44px;
+//     background: $color-white;
+//     border: 1px solid #B5B5B5;
+//     color: $color-black-normal;
+//     border-radius: 5px;
 
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    margin: 5px 5px 5px 0px;
-    padding: 0px 5px 0px 5px;
-}
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 12px;
+//     line-height: 16px;
+//     margin: 5px 5px 5px 0px;
+//     padding: 0px 5px 0px 5px;
+// }
 
-.mat-form-field{
-    text-align: center !important;
-}
+// .mat-form-field{
+//     text-align: center !important;
+// }
 
-::ng-deep .mat-form-field-underline {
-    display: none;
-}
+// ::ng-deep .mat-form-field-underline {
+//     display: none;
+// }
 
 ::ng-deep .mat-chip.mat-standard-chip {
     background-color: #ffffff;
@@ -126,4 +126,28 @@ h1 {
 
 ::ng-deep .fa-sm {
     font-size: 0.8em;
+}
+
+.mat-form-field{
+    width: 90%;
+    height: 44px;
+    background: $color-white;
+    border: 1px solid #B5B5B5;
+    color: $color-black-normal;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    margin: 5px 5px 5px 0px;
+    padding: 0px 5px 5px 5px;
+}
+
+::ng-deep .mat-form-field-label{
+    font-size: 14px !important;
+}
+
+::ng-deep .mat-form-field-underline {
+    display: none;
 }
